Added a lot of stuff
Added features
To view selected students
To view applied students
To view statistics of students
To download the selected students
To download applied students

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -690,3 +690,13 @@ select {
     padding: 50px 30px;
   }
 }
+
+/* ==========================================================================
+   #TABLE
+   ========================================================================== */
+
+   table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 15px;
+  }
