--- a/templates/views/teacher-home.ejs
+++ b/templates/views/teacher-home.ejs
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="/teacher-home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Upload</a>
+                    <a class="nav-link" href="/upload">Upload</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/plot-graph">View</a>
