--- a/templates/views/student-home.ejs
+++ b/templates/views/student-home.ejs
@@ -57,6 +57,9 @@
                         <li class="nav-item">
                         <a class="nav-link" href="#">Companies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" onclick="ques()" href="#">F.A.Q.</a>
+                        </li>
                   </ul>
                   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                         <ul class="navbar-nav ml-auto">
